# Projet_Dilacte_Conversion

./: README.md  cmakeYaml
Projet_Dilacte_Conversion/: CMakeLists.txt
Projet_Dilacte_Conversion/docs/: StructConvertisseur.rst  array.rst  arrayStruct.rst  chl.rst  chlStruct.rst  conf.py  index.rst  main.rst  nbl.rst  nblStruct.rst  requirements.txt  utils.rst
Projet_Dilacte_Conversion/src/: Doxyfile
Projet_Dilacte_Conversion/src/code/: CMakeLists.txt  main.c  main.h
Projet_Dilacte_Conversion/src/code/array/: ArrayConfig.cmake.in  CMakeLists.txt  array.c  array.h  array.inc  array.pc  array.pc.in  test-affiche-array.c  test-creat-array.c  test-get-array.c
Projet_Dilacte_Conversion/src/code/chiffreEnLettre/: CMakeLists.txt  ChiffreEnLettreConfig.cmake.in  chiffreEnLettre.c  chiffreEnLettre.h  chiffreEnLettre.inc  chiffreEnLettre.pc  chiffreEnLettre.pc.in  test-creat-ChiffreEnLettre.c
Projet_Dilacte_Conversion/src/code/numberToLetter/: CMakeLists.txt  NumberToLetterConfig.cmake.in  numberToLetter.c  numberToLetter.h  numberToLetter.inc  numberToLetter.pc  numberToLetter.pc.in  test-creat-NumberToLetter.c  test-get-NumberToLetter.c
Projet_Dilacte_Conversion/src/code/utils/: CMakeLists.txt  UtilsConfig.cmake.in  test-my_strcat.c  test-mystrcmp.c  utils.c  utils.h  utils.pc  utils.pc.in
Projet_Dilacte_Conversion/src/code/yaml/: Date_day.yaml  FR_fr_african.yaml  romain.yaml
Projet_Dilacte_Conversion/src/convertisseur/: convertisseur.h  convertisseur.inc
Projet_Dilacte_Conversion/src/html/: graph_legend.html
Projet_Dilacte_Conversion/src/latex/: refman.tex
code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/src/: CMakeCache.txt  CMakeLists.txt  Makefile  chiffreEnLettre.c  chiffreEnLettre.h  chiffreEnLettre.inc  cmake_install.cmake  convertisseur.c  convertisseur.h  convertisseur.inc  main.c  main.h  tabData.h  tabData.inc  utils.c  utils.h
code/src/array/: CMakeLists.txt  Makefile  array.c  array.h  array.inc  test-affiche-array.c  test-creat-array.c
code/src/chiffreEnLettre/: CMakeLists.txt  CTestTestfile.cmake  Makefile  chiffreEnLettre.c  chiffreEnLettre.h  chiffreEnLettre.inc  cmake_install.cmake  libchiffreEnLettre.so.0.0.1  test-creat  test-creat.c  test-get  test-get.c
code/src/tabData/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tabData.c  tabData.h  tabData.inc
code/src/utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libutils.so.0.0.1  libutils.so.1  test-my_strcat  test-my_strcat.c  test-mystrcmp  test-mystrcmp.c  test-tronqueChaine.c  utils.c  utils.h  utils.pc  utils.pc.in
code/yaml/: FR_fr.yaml  testLecture.c
code/yaml/src/: CMakeLists.txt  test.c  testLecture.c  utilisation_Yaml
documentation/: CMakeLists.txt
documentation/Projet_Dilacte_Conversion/docs/: CMakeLists.txt  index.rst  structConv.rst
documentation/Projet_Dilacte_Conversion/src/: CMakeLists.txt
documentation/Projet_Dilacte_Conversion/src/convertisseur/: CMakeLists.txt
documentation/Projet_Dilacte_Conversion/src/html/: index.html
documentation/docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt  test.rst
documentation/src/: Doxyfile
documentation/src/test/: CMakeLists.txt  test.c  test.h
